#12: Shared metadata catalog (http://github.com/Mapzone/mapzone/issues/issue/12)
  - smaller scrollbar

--- a/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
+++ b/plugins/org.polymap.rhei.batik/resources/css/md/md-standard.css
@@ -2042,8 +2042,8 @@ ScrollBar {
   background-image: none;
   border: none;
   border-radius: 0;
-  border: 4px solid inherit;
-  width: 12px;
+  border: 2px solid inherit;
+  width: 8px;
 }
 
 /* line 12, ../../sass/md/_scrollbar.scss */
