--- a/plugins/org.polymap.rhei.batik/resources/sass/md/_scrollbar.scss
+++ b/plugins/org.polymap.rhei.batik/resources/sass/md/_scrollbar.scss
@@ -5,8 +5,8 @@ ScrollBar {
   background-image: none;
   border: none;
   border-radius: 0;
-  border: 4px solid inherit;
-  width: 12px;  
+  border: 2px solid inherit;
+  width: 8px;
 }
 
 ScrollBar-Thumb {
